Fix: Attempting to fix uneven box length bug that only shows on real mobile dev for reservations

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -336,6 +336,13 @@ ul {
   text-align: center;
 }
 
+.reservations__input[type="date"],
+.reservations__input[type="time"] {
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+}
+
 .reservations__title {
   font-size: 2.5rem;
   font-weight: 700;
